# GglOpenGLDemo

./: CMakeLists.txt  imgui.ini  readme.md
dependencies/curl-mingw/: BUILD-HASHES.txt  BUILD-MANIFEST.txt
dependencies/ffmpeg-master-latest-win64-gpl-shared/doc/: ffmpeg-all.html  ffmpeg-filters.html  ffmpeg.html  ffplay-all.html  ffprobe-all.html
dependencies/ffmpeg-master-latest-win64-gpl-shared/include/libavutil/: ffversion.h
dependencies/libevent/include/event2/: event-config.h
include/: App.h  GglAVFrameQueue.h  GglAVPacketQueue.h  GglAudioPlayTask.h  GglAudioPlayer.h  GglBackground.h  GglBlockingQueue.h  GglChat.h  GglCodecProcess.h  GglDemuxProcess.h  GglDynamicIndexBuffer.h  GglDynamicVertexBuffer.h  GglFrameVector.h  GglHttpReceiver.h  GglHttpSender.h  GglIndexBuffer.h  GglMainWindowManager.h  GglNote.h  GglPreBuild.h  GglRenderer.h  GglShader.h  GglSwResample.h  GglSwScale.h  GglTest.h  GglTexture.h  GglTip.h  GglVertexArray.h  GglVertexBuffer.h  GglVideoPlayTask.h  PreInclude.h  VertexBufferLayout.h  Welcome.h  imgui.ini  parson.h  stb_image.h
include/glad/: glad.h
src/: CMakeLists.txt  app.cpp  glad.c  imgui.ini  parson.c
src/class/: GglAVFrameQueue.cpp  GglAVPacketQueue.cpp  GglAudioPlayTask.cpp  GglAudioPlayer.cpp  GglBackground.cpp  GglChat.cpp  GglCodecProcess.cpp  GglDemuxProcess.cpp  GglDynamicIndexBuffer.cpp  GglDynamicVertexBuffer.cpp  GglFrameVector.cpp  GglHttpReceiver.cpp  GglHttpSender.cpp  GglIndexBuffer.cpp  GglMainWindowManager.cpp  GglNote.cpp  GglRenderer.cpp  GglResample.cpp  GglShader.cpp  GglSwScale.cpp  GglTest.cpp  GglTexture.cpp  GglTextureTest.cpp  GglTip.cpp  GglVertexArray.cpp  GglVertexBuffer.cpp  GglVideoPlayTask.cpp  VertexBufferLayout.cpp  Welcome.cpp  app.cpp  imgui.ini
src/imgui/: imgui.ini
src/shader/: FragmentShader.txt  MyShader.shader  VertexShader.txt
test/: Makefile  text.cpp
winmsibuild/: demo.aip
winmsibuild/demo-cache/part1/: output-info.ini
